# etl-test

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  env-example.txt  pyproject.toml
docker/: Dockerfile  docker-compose.yml
scripts/: etl.py  install_hooks.sh
src/: database.py  etl.py  main.py  models.py
src/data_generation/: run.py
src/db_config/: models.py
src/db_config/alvo/: database.py  models.py
src/db_config/fonte/: database.py  models.py
tests/: test_beta.py
